# unificado

./: .dockerignore  .gitignore  CONTEXTO.md  DATABASE_SCHEMA.md  DOCKER_INSTALL.md  Dockerfile  LICENSE  README.md  check_after_deploy.ps1  check_after_deploy.sh  convencoes.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: config.py  main.py
docs/: GRAPH_INSIGHTS.md
infra/api/: routes.py
infra/data/: models.py  schemas.py
infra/database/: create_tables.py  database.py  test_connection.py
migrations/: env.py
migrations/versions/: 0001_create_users_and_profiles_and_admin.py  0002_insert_default_disciplines.py  0006_add_profiles_seed.py  0007_add_ads_course.py  0008_add_status.py  0008_add_status_to_students_disciplines.py  0009_update_students.py  339dbadfaddc_create_discipline_and_courses_tables.py  3aa3a204d952_relacionando_disciplinas_professores_.py  e86d6eb564a6_relacionando_cursos_e_disciplinas.py  f12a3b4c5d67_link_courses_and_disciplines.py
scripts/: run-build-step.sh
unificado/: app.py  database.py  graph_insights.py  models.py  schemas.py  security.py  settings.py  utils.py
unificado/routers/: auth.py  course.py  discipline.py  insights.py  students.py  system.py  teachers.py  users.py
